--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.358.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
