--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.0.17",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
