--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.8.0",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
