--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
